# project2_Panshina_M25-555

./: .gitignore  Makefile  README.md  db_meta.json  final  pyproject.toml  test_vid
data/: users.json
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
